@@ -2,6 +2,7 @@ Node Revision Delete 8.1.0-alpha3, 2017-XX-XX
 ---------------------------------------------
 Changes since 8.1.0-alpha2:
 
+- by adriancid: Add a dry-run option. 
 - by adriancid: Change drush ndr-delete-cron-run command name to
   nrd-delete-cron-run.
 - by adriancid: Create an option group in the content type edit form.
